--- a/templates/base.html
+++ b/templates/base.html
@@ -57,8 +57,12 @@
 
           </div>
           <div class="navigation-area">
-            
+            {% block 'content'%}
+
+            {% endblock %}
           </div>
+
+          
         </header>
 
         <main>
