--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,15 @@
 {% extends "base.html" %}
+{% load static%}
 
-{% block content%}
-
-
+{% block 'content'%}
+<div class="banner"></div>
+<div class="card-categories-container">
+    <a href="" class="card">
+    
+        <img src="{% static 'imgs/grey-background.jpeg'%}" alt="">
+    </a>
+</div>
 {%endblock%}
+
+
+"{% static "css/style.css" %}"
